# todos_web_api

./: .env  .swp  Cargo.toml  README.md  docker-compose.yaml
migrations/: 0001_create_todos_table.sql  0001_create_users_table.sql  0002_create_todos_table.sql  0003_create_refresh_tokens_table.sql  0004_create_access_tokens_table.sql  0005_create_api_keys_table.sql
src/: .main.rs.swp  lib.rs  main.rs
src/controllers/: access_tokens_controller.rs  api_keys_controller.rs  auth_controller.rs  refresh_tokens_controller.rs  todos_controller.rs  users_controller.rs
src/database/: init.rs
src/models/: access_token.rs  api_key.rs  auth.rs  refresh_token.rs  todo.rs  user.rs
src/routes/: access_tokens.rs  api_keys.rs  init.rs  middlewares.rs  refresh_tokens.rs  todos.rs  users.rs
src/utils/: error.rs  input_validation.rs  tokens.rs
