[package]
name = "todos_web_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
dotenv = "0.15.0"
serde = "1.0.204"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "mysql"] }
tokio = { version = "1.38.0", features = ["full"] }



